kubernetes/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath -f docker-compose.yml
    kompose.version: 1.31.0 (a04ecdb9e)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath -f docker-compose.yml
        kompose.version: 1.31.0 (a04ecdb9e)
      creationTimestamp: null
      labels:
        io.kompose.network/mauagendar-app-network: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - image: rabbitmq:3.9-management-alpine
          livenessProbe:
            exec:
              command:
                - rabbitmqctl
                - status
            failureThreshold: 3
            periodSeconds: 5
            timeoutSeconds: 5
          name: rabbitmq
          ports:
            - containerPort: 5672
              hostPort: 5672
              protocol: TCP
            - containerPort: 15672
              hostPort: 15672
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
