kubernetes/auth-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2023-10-04T18:36:57Z"
  labels:
    io.kompose.service: auth
  name: auth-load-balancer
  namespace: default
  resourceVersion: "70940"
  uid: 017c1f5d-27ad-49c7-a9ce-51656ca44019
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.105.74.212
  clusterIPs:
  - 10.105.74.212
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31309
    port: 5050
    protocol: TCP
    targetPort: 5050
  selector:
    io.kompose.service: auth
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - hostname: localhost
