kubernetes/calendar-lb.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2023-10-04T18:38:47Z"
  labels:
    io.kompose.service: calendar
  name: calendar-load-balancer
  namespace: default
  resourceVersion: "71090"
  uid: a1254b2d-a327-4d11-991c-192191affd7c
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.104.147.144
  clusterIPs:
  - 10.104.147.144
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31607
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    io.kompose.service: calendar
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - hostname: localhost
