kubernetes/calendar-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --volumes hostPath
    kompose.version: 1.31.0 (a04ecdb9e)
  creationTimestamp: null
  labels:
    io.kompose.service: calendar
  name: calendar
  namespace: default
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: calendar
status:
  loadBalancer: {}
